Base docker with extension (#100100)
* Add an extension and break a bunch of stuff

* Simplify lockfile

* Use an extension to configure the base image

* Fix csv generator location

* Tests for simple lockfile generation and building with ubuntu

* Read the certs automatically from the mirrors

* Plugin validate and combine test

* Parametrize test

* move install to last, extend test

* Track user, and install with root

* Add a verification script  to  check on what was built

* Check lockfile in verification script

* Add tests for multi project builds

* Add a test for push

* Remove duplicate line

* More tests

* Fix centos test

* Make the docker prefixes configurable

* test for push and don't hard code elatic registy

* fix tests on Linux

* Fix tests on Linux, try 2

* Fix pre coffee typo

* Last missing tests

* Some initial docs

* Extend lockfile for x86_64

* Fix test on Linux again

* Complete docs and an additional test with the sandbox plugin